--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap-icons": "^1.11.3",
     "cor": "^0.0.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-ws": "^5.0.2",
