--- a/example.env
+++ b/example.env
@@ -1,9 +1,6 @@
-PORT=
-NODE_ENV=
-DATABASE_LOCAL=
-DATABASE=
-DATABASE_PASSWORD=
-MONGO_URI=
-GCLOUD_STORAGE_BUCKET_TEXTURE=
-GCLOUD_STORAGE_BUCKET_RESULT=
-GOOGLE_APPLICATION_CREDENTIALS=
+PORT=8080
+DATABASE=mongodb+srv://107702039:RlvtXSIv10Yx0lQS@daotaiwan.sxdo6zy.mongodb.net/daoTaiwan
+PROJECT_ID=dao-420504
+GCLOUD_STORAGE_BUCKET_TEXTURE=texture-image
+GCLOUD_STORAGE_BUCKET_RESULT=result-image
+GOOGLE_APPLICATION_CREDENTIALS=/cred.json
